# quantum_accel

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
Optimized_quantum_gates/: gates.py
benchmark_results/: 20250530_033503_benchmark_results.csv  20250530_033503_benchmark_results.json  20250530_033503_benchmark_summary.md  20250530_033632_benchmark_results.csv  20250530_033632_benchmark_results.json  20250530_033632_benchmark_summary.md  20250530_050227_memory_benchmark.csv  20250530_050227_memory_benchmark.json  20250530_050227_memory_benchmark.md  20250530_050425_memory_benchmark.csv  20250530_050425_memory_benchmark.json  20250530_050425_memory_benchmark.md  combined_compressed_20250523_130951.npz  compression_metrics_20250523_130951.csv  matrix_only_20250523_130951.npz  metadata_only_20250523_130951.pickle  metadata_structure_20250523_130951.csv  more_explanation_20250523_130951.csv  original_connections_20250523_130951.pickle  reconstruction_analysis_20250523_130951.csv  strength_distribution_20250523_130951.csv
headers/: evolved_transformations.h  evolving_and_or_eigen.h  evolving_hadamard_and_eigen.h  evolving_hadamard_cnot_eigen.h  evolving_hadamard_pauli_x_cnot_eigen.h  evolving_imply_nimply.pkl_eigen.h  evolving_nand_nor_eigen.h  evolving_pauli_x_or.pkl_eigen.h  evolving_pauli_x_or_eigen.h  evolving_xnor_xor_eigen.h  evolving_xor_and_eigen.h  or_gate_eigen.h  quantum_cnot_eigen.h  quantum_hadamard_eigen.h  quantum_pauli_x_eigen.h  quantum_toffoli_eigen.h  xor_gate_eigen.h  (+4 more)
quantum_accel/: Cargo.toml
quantum_accel/src/: __init__.py  lib.rs
(+5 files in other folders)
